# ai_to_old_car

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  main.cpp  main.py  requirements.txt
.github/workflows/: docker-hub.yaml  linter.yaml
src/: const.py  midas_distance_estimator.py  movement_detector.py  road_decision.py  road_detector.py  yolo.cpp  yolo.h
src/object_detection/: distance_estimation.py  object_to_drawing.py  tracking.py  typing_object_detection.py
src/pico_script/: L298N.py  acceleration.py  braking.py  buzzer.py  change_direction_left.py  change_direction_right.py  const.py  pico_controller.py  servo.py  test_connection.py  turn_left.py  turn_right.py
src/road_detection/: road_detector.py
test/: test_distance_detection.py  test_pico.py  test_road_detection.py  test_tracking_distance.py
tools/: download_onnx_model.py  record.py  record_raspberry.py
